# basic-fastapi

./: create_asterisk_user.py  debug_auth.py  main.py  pyproject.toml  test_swagger_auth.py
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: items.py  users.py
app/core/: database.py
app/models/: auth_models.py  user.py  user_model.py
app/routers/: routers.py
app/routers/v1/: authentication_router.py  items.py  users.py  users_router.py
app/schemas/: user.py  user_schemas.py
src/: database.py  main.py
src/api/v1/: routers.py
src/api/v1/endpoints/: items.py  users.py
src/models/: item.py  receiver.py  user.py
src/routers/v1/: items.py  receivers.py
tests/: create_user.py  debug_auth.py  test_auth.py  test_user.py
