[project]
name = "basic-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "peterpk1",email = "phatsawut.phuket1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.12.1,<0.13.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
]

[tool.poetry]
packages = [{include = "basic_fastapi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
