[project]
name = "basic-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "peterpk1",email = "phatsawut.phuket1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.12.1,<0.13.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
]

[tool.poetry]
packages = [{include = "basic_fastapi", from = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

